# AgentLite

./: README.md
.github/workflows/: build_test.yml
agent_lite/: lib_example.py  pyproject.toml  requirements.txt
agent_lite/agent_lite/: __init__.py  composition.py  context.py  link.py  logger.py  model.py  output_parser.py  prompt.py  resources.py  tool.py
agent_lite/agent_lite/chains/: basic.py
examples/: kg.py  llamaindex.py  requirements.txt
