[tool.poetry]
name = "agent-lite"
version = "0.1.0"
description = ""
authors = ["Elliot Kang <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
