[tool.poetry]
name = "agent-lite"
version = "0.1.1"
description = ""
authors = ["Elliot Kang <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
pydantic = "<2"
aiohttp = ">=3.6.0"
asyncio = ">=3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
